Mailbox and View Email functionality implemented. Going well.

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -14,6 +14,16 @@
     <div id="emails-view">
     </div>
 
+    <div id="display-view">
+      <p id="from-field"></p>
+      <p id="to-field"></p>
+      <p id="subject-field"></p>
+      <p id="timestamp-field"></p>
+      <hr>
+      <pre id="email-body-field"></pre>
+
+    </div>
+
     <div id="compose-view">
         <h3>New Email</h3>
         <form id="compose-form">
