--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,28 @@
 textarea {
     min-height: 400px;
 }
+
+pre {
+  font-size: 18px;
+  line-height: 1.6;
+  background-color: lightgrey;
+  padding: 10px;
+  margin: 10px;
+}
+
+.mailbox_item_read{
+  background-color: pink;
+  padding: 10px;
+  margin: 10px;
+  border: solid 2px black;
+  border-radius: 5px;
+}
+
+
+.mailbox_item_unread{
+  background-color: purple;
+  padding: 10px;
+  margin: 10px;
+  border: solid 2px black;
+  border-radius: 5px;
+}
