--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -19,6 +19,8 @@
       <p id="to-field"></p>
       <p id="subject-field"></p>
       <p id="timestamp-field"></p>
+      <button class="btn btn-sm btn-primary" id="archive-button">Archive Email</button>
+      <button class="btn btn-sm btn-primary" id="un-archive-button">Un-Archive Email</button>
       <hr>
       <pre id="email-body-field"></pre>
 
